--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "webpack": "4.28.4",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0"
   }
 }
