--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "needle": "^2.2.4"
   }
 }
