--- a/package.json
+++ b/package.json
@@ -26,10 +26,5 @@
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14"
   },
-  "dependencies": {
-    "fs": "0.0.1-security",
-    "jquery": "^3.3.1",
-    "moment": "^2.24.0",
-    "needle": "^2.2.4"
-  }
+  "dependencies": {}
 }
