--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0"
+  }
 }
